feature/new-feature

--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <h1>work in team</h1>
-    <p>Teamwork is the collaborative effort of a group to achieve a common goal or complete a task efficiently and effectively, leveraging individual strengths and promoting mutual support.</p>
-   
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <h1>🌟 Work in Team 🌟</h1>
+
+    <div class="card">
+    <p id="P">
+      Teamwork is the collaborative effort of a group to achieve a common goal
+      or complete a task efficiently and effectively, leveraging individual
+      strengths and promoting mutual support.
+    </p>
+    </div>
+
+    <div class="div">
+        <p>Made with difficulty😊 </p>
+    </div>
+  </body>
 </html>
